<resources>
    <string name="quan_ping">全屏</string>
    <string name="tishi">提示</string>
    <string name="lian_jie_chao_shi_shao_hou_zai_shi">连接超时稍后再试</string>
    <string name="wo_zhi_dao_le">我知道了</string>
    <string name="nin_que_ding_yao_li_kai_you_xi">您确定要离开游戏?</string>
    <string name="zhuan_zhang">转账</string>
    <string name="jin_ru_chang_guan_zi_dong_dai_ru_jin_e">进入场馆时自动带入金额</string>
    <string name="zhong_xin_qian_bao">中心钱包</string>
    <string name="zhong_xin_qian_bao2">中心钱包(￥)</string>
    <string name="cong">从</string>
    <string name="dao">到</string>
    <string name="zhuan_zhang_jin_e">转账金额</string>
    <string name="quan_bu_jin_e">全部金额</string>
    <string name="qing_shu_ru_zhuan_zhang_jin_e">请输入转账金额</string>
    <string name="qing_shu_ru_zhuan_zhang_jin_e2">请输入</string>
    <string name="zhong_xin_qiao_bao_xian_you">中心钱包现有</string>
    <string name="li_ji_zhuan_zhang">立即转账</string>
    <string name="yi_jian_hui_shou">一键回收</string>
    <string name="ru_xu_bang_zhu_qing_lian_xi">如需帮助，请联系</string>
    <string name="zhuan_zhang_jiao_cheng">转账教程</string>
    <string name="shou_cang">收藏</string>
    <string name="xuan_ze_qian_bao">选择钱包</string>
    <string name="qu_xiao">取消</string>
    <string name="que_ren">确定</string>
    <string name="liu_shui_xiang_qing">流水详情</string>
    <string name="can_yu_huo_dong">参与活动</string>
    <string name="suo_xu_liu_shui">所需流水</string>
    <string name="yi_wan_cheng_liu_shui">已完成流水</string>
    <string name="liu_shui_xiang_qing_1">1.完成流水后可将场馆钱转出至中心钱包</string>
    <string name="liu_shui_xiang_qing_2">2.流水未完成前，转账到场馆将会提高流水要求，且钱未满足所需流水将无法转出</string>
    <string name="liu_shui_xiang_qing_3">3.活动场馆的流水不与其他活动流水重复计算</string>
    <string name="zhuan_ru_jin_e">转入金额</string>
    <string name="hai_zai_can_yu_huo_dong">您还在参与活动，转入金额后，流水未达标将不可转出！</string>
    <string name="dian_ji_xuan_ze">点击选择</string>
    <string name="zhuan_shu_ke_fu">专属客服</string>
    <string name="wu_fa_zhuan_ru">场馆维护中无法转入</string>
    <string name="wu_fa_zhuan_chu">场馆维护中无法转出</string>
    <string name="can_yu_huo_dong_zhong_wu_fa_zhuan_chu">活动参与中不可转出</string>
    <string name="qing_xuan_ze_qian_bao">请选择钱包</string>
    <string name="yi_can_jia_chang_guan_huo_dong">已参加场馆活动%@不可转出</string>
    <string name="bu_ke_zhuan_chu">不可转出</string>
    <string name="hui_shou_zhong">回收中.....</string>
    <string name="qian_bao_zheng_zai_hui_shou_zhong">钱包正在回收中</string>
    <string name="zhong_xin_qian_bao_he_ke_hui_shou_de_chang">中心钱包和可回收的场馆金额将被带入到进入的场馆中</string>
    <string name="shi_fou_guan_bi_zi_dong_dai_ru_jin_e">是否关闭自动带入金额</string>
    <string name="shi_fou_kai_qi_zi_dong_dai_ru_jin_e">是否开启自动带入金额</string>
    <string name="xian_you">现有</string>
    <string name="wei_jian_ce_dao_alipay">未检测到支付宝客户端，请安装后重试</string>
    <string name="li_ji_an_zhuang">立即安装</string>
    <string name="ty">体育</string>
    <string name="zr">真人</string>
    <string name="dj">电竞</string>
    <string name="qp">棋牌</string>
    <string name="cp">彩票</string>
    <string name="by">捕鱼</string>
    <string name="qkl">区块链</string>
    <string name="dy">电子</string>
    <string name="in_maintain">维护中</string>
    <string name="in_stop">已禁用</string>
    <string name="enter_game">直接进入</string>
    <string name="game_in_maintain">该场馆正在维护中，请选择其他场馆</string>
    <string name="game_in_maintain2">该游戏正在维护中，请选择其他游戏</string>
    <string name="game_join">进入</string>
    <string name="maintain">维护</string>
</resources>