<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conlayout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <ImageView
        android:id="@+id/view_back"
        android:layout_width="327dp"
        android:layout_height="300dp"
        android:background="@drawable/round_rec_1d2933_radius"
        app:layout_constraintBottom_toTopOf="@+id/custom_keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/zhuan_ru_jin_e"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@id/view_back"
        app:layout_constraintTop_toTopOf="@+id/view_back"
        app:layout_goneMarginStart="16dp" />

    <!--1.完成流水后客将场馆钱转出至中心钱包-->
    <TextView
        android:id="@+id/tv_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.6"
        android:text="@string/hai_zai_can_yu_huo_dong"
        android:textColor="@color/white_tr60"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/view_back"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <TextView
        android:id="@+id/tv_center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.6"
        android:text="@string/zhong_xin_qian_bao2"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_one" />


    <TextView
        android:id="@+id/tv_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="200"
        android:textColor="@color/color_E1A100"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/tv_center"
        app:layout_constraintTop_toTopOf="@+id/tv_center" />

    <TextView
        android:id="@+id/tv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="￥"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/tv_center"
        app:layout_constraintTop_toBottomOf="@+id/tv_center" />

    <EditText
        android:id="@+id/ed_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:hint=""
        android:textSize="14dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_icon"
        app:layout_constraintEnd_toStartOf="@+id/tv_all_money"
        app:layout_constraintStart_toEndOf="@+id/tv_icon"
        app:layout_constraintTop_toTopOf="@+id/tv_icon" />

    <com.example.ob_app.view.CustomEditTextView
        android:id="@+id/curtom_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_icon"
        app:layout_constraintEnd_toStartOf="@+id/tv_symbol"
        app:layout_constraintStart_toEndOf="@+id/tv_icon"
        app:layout_constraintTop_toTopOf="@+id/tv_icon" />

    <TextView
        android:id="@+id/tv_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_icon"
        app:layout_constraintEnd_toStartOf="@+id/tv_all_money"
        app:layout_constraintTop_toTopOf="@+id/tv_icon" />

    <TextView
        android:id="@+id/tv_all_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/quan_bu_jin_e"
        android:textColor="@color/color_E1A100"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_icon"
        app:layout_constraintEnd_toEndOf="@+id/view_back"
        app:layout_constraintTop_toBottomOf="@+id/tv_center"
        app:layout_constraintTop_toTopOf="@+id/tv_icon" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:alpha="0.06"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/view_back"
        app:layout_constraintStart_toStartOf="@+id/view_back"
        app:layout_constraintTop_toBottomOf="@+id/tv_icon" />

    <TextView
        android:id="@+id/tv_button_cancel"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@mipmap/btnbg_3"
        android:gravity="center"
        android:text="@string/enter_game"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_back"
        app:layout_constraintEnd_toStartOf="@+id/tv_button_sure"
        app:layout_constraintStart_toStartOf="@+id/view_back" />

    <TextView
        android:id="@+id/tv_button_sure"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:background="@drawable/select_back_trans_money"
        android:gravity="center"
        android:text="@string/que_ren"
        android:textColor="@drawable/select_text"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/view_back"
        app:layout_constraintStart_toEndOf="@+id/tv_button_cancel"
        app:layout_constraintTop_toTopOf="@+id/tv_button_cancel" />

    <com.example.ob_app.view.ViewCustomKeyBoard
        android:id="@+id/custom_keyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
